--- a/GamificacaoTech/public/stylesheets/main.css
+++ b/GamificacaoTech/public/stylesheets/main.css
@@ -1,8 +1,15 @@
 ﻿body {
-    padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
-a {
-    color: #00B7FF;
+html{
+    width: 100vw;
+    height: 100vh;
 }
+
+.mainPageHolder{
+    border: solid 2px black;
+    width: 25vw;
+    height: 25vh;
+    
+}
+
