--- a/GamificacaoTech/views/home.ejs
+++ b/GamificacaoTech/views/home.ejs
@@ -1,3 +1,4 @@
 ﻿<div id="mainPageHolder" class="mainPageHolder">
-    <p>HOME PAGE</p>
+    <p><%=titulo%></p>
+    <p>This website is under construction. If you're a front end folk, please direct yourself to one of the routes created on, either the app.ts file or some file under the routes folder</p>
 </div>
