--- a/GamificacaoTech/views/cabecalho.ejs
+++ b/GamificacaoTech/views/cabecalho.ejs
@@ -1,4 +1,1 @@
-﻿<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/lib/jquery/jquery-1.0.0.min.js"></script>
-<link rel="stylesheet" href="/stylesheets/main.css" />
+﻿<link rel="stylesheet" href="/stylesheets/main.css" />
