--- a/GamificacaoTech/views/cabecalho.ejs
+++ b/GamificacaoTech/views/cabecalho.ejs
@@ -2,3 +2,4 @@
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/lib/jquery/jquery-1.0.0.min.js"></script>
 <link rel="stylesheet" href="/css/admin-1.0.19.css" />
+<link rel="stylesheet" href="/stylesheets/main.css" />
