--- a/GamificacaoTech/views/layout.ejs
+++ b/GamificacaoTech/views/layout.ejs
@@ -20,6 +20,8 @@
         </div>
         
 
-        
+        <%- include("rodape") %>
+        <%- defineContent("scripts") %>
+
     </body>
 </html>
