--- a/GamificacaoTech/views/cabecalho.ejs
+++ b/GamificacaoTech/views/cabecalho.ejs
@@ -1,5 +1,6 @@
 ﻿<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/lib/jquery/jquery-1.0.0.min.js"></script>
 <link rel="stylesheet" href="/css/admin-1.0.19.css" />
 <link rel="stylesheet" href="/stylesheets/main.css" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
