--- a/GamificacaoTech/views/home.ejs
+++ b/GamificacaoTech/views/home.ejs
@@ -17,6 +17,6 @@
 <%- contentFor("scripts")%>
 <script type="text/javascript">
     function registroRedirect() {
-        window.location.replace("/test")
+        window.location.replace("/formTest")
     }
 </script>
