--- a/GamificacaoTech/views/layout.ejs
+++ b/GamificacaoTech/views/layout.ejs
@@ -13,7 +13,7 @@
     <body>
 
         
-        <div id="page-wrapper">
+        <div id="page-wrapper" class="page-wrapper">
 
             <%- body %>
 
